# frontier_exploration_occupancygrid

./: CMakeLists.txt  README.md  package.xml
config/: test.yaml
config/cartographer/: config.lua
config/move_base/: base_global_planner_param.yaml  costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/rviz/: cartographer.rviz  gmapping.rviz  gmapping_stage.rviz
include/: actuator.h  frontier_detector.h
launch/: frontier_detector.launch  frontier_exploration.launch  move_cartographer.launch  move_gmapping.launch
src/: actuator.cpp  frontierMain.cpp  frontier_detector.cpp
srv/: get_centroids.srv
urdf/sensor/: IMU.urdf.xacro  hokuyo.urdf.xacro  kinect_gazebo.urdf.xacro
urdf/turtlebot2/: hexagons.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  turtlebot2.xacro  turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro
urdf/turtlebot2/kobuki/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
world/: MTR.world  corrider.world  garage.world  hard.world  house.world  number.world  shopping_mall.world  super_mall.world  unknown.world
